# wire

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
data/model/: missile.yaml  ship.yaml
include/: eng.hpp  fx.hpp  geom.hpp  object.hpp  shape.hpp
param/: param.yaml
scripts/: model.py
src/: main.cpp
src/eng/: eng.cpp  object.cpp  shape.cpp
src/fx/: fx.cpp  geom.cpp
tests/: test.cpp
